--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hellow word</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>hello ward</h1>
+    <h2>hello ward</h2>
+    <h3>hello ward</h3>
+    <h4>hello ward</h4>
+    <h5>hello ward</h5>
+    <h6>hello ward</h6>
+</body>
+</html>
